# json-engine

./: LICENSE  README.md  benchmark_compare.py  main.py  parser.py  pyproject.toml  test_output.json  test_tokenizer.py  tokenizer.py
demo/: demo_basic_api.py
documentation/: PROJECT_STRUKTURA.md  README_TESTING.md
json_engine/: __init__.py  api.py  encoder.py  parser.py  tokenizer.py
tests/: __init__.py  conftest.py  pytest.ini  test_api.py  test_encoder.py  test_integration.py  test_parser.py  test_tokenizer.py
