[project]
name = "json-engine"
version = "1.0.0"
description = "Custom JSON parser and encoder with comprehensive testing"
authors = [
{name = "Maxim"},
{name = "Blazej"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = []

[project.optional-dependencies]
dev = [
"pytest>=7.4.0",
"pytest-cov>=4.1.0",
"pytest-timeout>=2.1.0",
"ruff>=0.1.0",
"mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "A", "C4"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_.py"]
python_classes = ["Test"]
python_functions = ["test_*"]
addopts = [
"-v",
"--strict-markers",
"--tb=short",
"--cov=json_engine",
"--cov-report=html",
"--cov-report=term-missing",
"--cov-branch",
]
markers = [
"slow: marks tests as slow (deselect with '-m \"not slow\"')",
"integration: marks tests as integration tests",
"unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["json_engine"]
omit = [
"/tests/",
"/demo_.py",
"/pycache/",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
"pragma: no cover",
"def repr",
"raise AssertionError",
"raise NotImplementedError",
"if name == .main.:",
"if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false